# ME700-Assignment-2

./: .coverage  Assignment2README.md  README.md  assignment_2_genAIuse.txt  pyproject.toml
.github/workflows/: tests.yml
Technical_Correctness_Problems/: criticalloadanalysis_correctnessproblem3.py
src/Assignment_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Critical_Load_Analysis/: Assignment2TutorialREADME.md  Part2TutorialREADME.md  criticalloadanalysis_correctnessproblem1.py  criticalloadanalysis_correctnessproblem2.py  criticalloadanalysis_tutorial.py  graph_3d.py
src/Direct_Stiffness_Method/: Part1TutorialREADME.md  __init__.py  directstiffnessmethod.py  directstiffnessmethod_solver.py  directstiffnessmethod_tutorial.py  math_utils.py
tests/: test_criticalloadanalysis.py  test_criticalloadanalysis.py.bak  test_criticalloadanalysis_tutorial.py  test_directstiffnessmethod_tutorial copy.py  test_directstiffnessmethod_tutorial.py  test_graph_3d.py  test_math_utils.py
